@@ -73,6 +73,7 @@ organizations. The current SLURM development staff includes: </p>
 <li>Gerrit Renker (Swiss National Computer Centre)</li>
 <li>Andy Riebs (HP)</li>
 <li>Asier Roa (Barcelona Supercomputer Center, Spain)</li>
+<li>Andy Roosen (University of Deleware)</li>
 <li>Miguel Ros (Barcelona Supercomputer Center, Spain)</li>
 <li>Beat Rubischon (DALCO AG, Switzerland)</li>
 <li>Dan Rusak (Bull)</li>
@@ -93,6 +94,6 @@ organizations. The current SLURM development staff includes: </p>
 <li>Anne-Marie Wunderlin (Bull)</li>
 </ul>
 
-<p style="text-align:center;">Last modified 19 June 2011</p>
+<p style="text-align:center;">Last modified 22 June 2011</p>
 
 <!--#include virtual="footer.txt"-->
